<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.SettingsFragment"
    style="@style/DefaultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/settings_user_photo_weight"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/default_user"
            app:civ_border_color="@color/colorСardShadow"
            app:civ_border_width="@dimen/settings_user_photo_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_text_username"
            style="@style/LargeText"
            android:text="Name Surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <TextView
            android:id="@+id/settings_text_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_secondary"
            android:text="@string/online_status"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/settings_text_username" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        style="@style/PrimaryText"
        android:text="@string/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_header_block" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/settings_phone_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        android:clickable="true"
        android:background="@drawable/ripple_effect"
        android:focusable="true">


        <TextView
            android:id="@+id/settings_phone_number"
            style="@style/LargeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/defaultPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_phone_number_hint"
            style="@style/HintText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/changePhoneNumberHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number_hint"
            android:layout_marginTop="@dimen/vertical_margin_medium"
            android:layout_marginStart="@dimen/horizontal_margin_secondary"
            android:layout_marginEnd="@dimen/horizontal_margin_secondary"
            android:background="@color/material_drawer_dark_divider"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_username_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_phone_edit_button"
        android:clickable="true"
        android:background="@drawable/ripple_effect"
        android:focusable="true">

        <TextView
            android:id="@+id/settings_username"
            style="@style/LargeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_username_hint"
            style="@style/HintText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/changeUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/settings_username_hint"
            android:layout_marginTop="@dimen/vertical_margin_medium"
            android:layout_marginStart="@dimen/horizontal_margin_secondary"
            android:layout_marginEnd="@dimen/horizontal_margin_secondary"
            android:background="@color/material_drawer_dark_divider"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_about_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_username_edit_button"
        android:clickable="true"
        android:background="@drawable/ripple_effect"
        android:focusable="true">

        <TextView
            android:id="@+id/settings_about"
            style="@style/LargeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/aboutText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_about_hint"
            style="@style/HintText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/changeBioHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_about" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/settings_about_hint"
            android:layout_marginTop="@dimen/vertical_margin_medium"
            android:layout_marginStart="@dimen/horizontal_margin_secondary"
            android:layout_marginEnd="@dimen/horizontal_margin_secondary"
            android:background="@color/material_drawer_dark_divider"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/change_photo_button"
        android:layout_width="@dimen/settins_change_photo_icon_width"
        android:layout_height="@dimen/settins_change_photo_icon_heigth"
        android:layout_marginEnd="12dp"
        android:tint="@color/colorСard"
        android:src="@drawable/camera_add"
        app:layout_constraintBottom_toBottomOf="@+id/setting_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_header_block" />

</androidx.constraintlayout.widget.ConstraintLayout>